# rag-projects

./: .env.example  .gitignore  LICENSE  README.md  docker-compose-langfuse.yml  pyproject.toml
.github/workflows/: tests.yml
data/: news_data_vector_store.joblib
src/: main.py
tests/: __init__.py
tests/integration_tests/: __init__.py  test_together_integration.py
tests/unit_tests/: __init__.py  test_together_client.py
utils/: __init__.py  embendings.py  embendings_models.py  llm.py  loader.py
