[project]
name = "rag-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "sentence-transformers>=5.2.3",
    "together>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
